Fix z-index of 'Total', customize round display.

--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -32,6 +32,7 @@
   position: sticky;
   left: 0;
   background-color: #ddd;
+  z-index: 1;
 }
 
 .scoreboard tbody td {
